docs(api-model): say in ArrowIpc why arrow-vector is not used
The choice to hand-write the IPC framing over arrow-format's FlatBuffers
classes was only recorded in the branch discussion, so the next reader
had no way to weigh it. Measured on Java 25: arrow-vector with the Netty
allocator fails in class initialization unless four JVM flags are set,
and since api-model ships to SDK users those flags would reach their
launch configuration. It is also 14 jars against 2, and allocates the
body off heap, outside what -Xmx bounds for a 64 MiB request.

The build file's claim that it "needs no --add-opens" understated this,
so it now points at the class instead of naming one flag.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Signed-off-by: Olav Gjerde <olav@intellistream.ai>