@@ -25,7 +25,19 @@ import java.util.List;
 
 /**
  * The Arrow IPC stream format, restricted to what the datapoint contract allows. Reads and writes
- * with the generated FlatBuffers classes only, on heap, so no allocator and no JVM flags.
+ * with {@code arrow-format}'s generated FlatBuffers classes only, on heap, so no allocator and no
+ * JVM flags.
+ *
+ * <p>Deliberately not {@code arrow-vector}, which owns this layer upstream. On Java 25 it fails in
+ * class initialization unless the launch carries {@code --add-opens=java.base/java.nio=ALL-UNNAMED},
+ * {@code --enable-native-access=ALL-UNNAMED}, {@code --sun-misc-unsafe-memory-access=allow} and
+ * {@code -Dio.netty.tryReflectionSetAccessible=true}, and this module ships to SDK users, so those
+ * flags would land in their launch configuration. It is also 14 jars against 2 (Netty and a second
+ * Jackson generation among them), and it allocates off heap, which {@code -Xmx} does not bound for
+ * the 64 MiB of untrusted body the api accepts per request. Its FlatBuffers verifier is off by
+ * default in Java anyway, so it would not have checked these bytes for us: {@link #readStream}
+ * rejects explicitly instead. The Rust SDK does use the full arrow-rs crates, which have neither
+ * problem, and frames cross-parse between the two implementations.
  */
 public final class ArrowIpc {
 
